# routes/not_found_route.go
@@ -1,12 +1,16 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"Phylogeny/models"
+
+	"github.com/gofiber/fiber/v2"
+)
 
 func NotFoundRoute(a *fiber.App) {
 	a.Use(func(c *fiber.Ctx) error {
-		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"error":   true,
-			"message": "Not Found",
+		return c.Status(fiber.StatusNotFound).JSON(models.ErrorResponse{
+			Error:   "Not Found",
+			Message: "The requested URL was not found on this server",
 		})
 	})
 }
